--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/sass/styles.scss"
                         ],
                         "scripts": []
                     }
